# minicloud

./: Cargo.toml  README.md
src/: cli_args.rs  file_chooser.rs  html_page.rs  html_page_utils.rs  main.rs  server.rs  server_receiver_mode.rs  server_transmitter_mode.rs  storage.rs  style.rs
src/fs_object/: mod.rs
src/server_receiver_mode/: index.html  script.js  style.css
templates/: style.css
templates/server_receiver_mode/: index.html  script.js  style.css
templates/server_transmitter_mode/: index.html
