[package]
name = "minicloud"
version = "0.9.9"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }  # --- Arguments parsing
#wild = "2.2.0"  # --- Augment clap: for supporting wildcards (*) on Windows like you do on Linux
tokio = { version = "1.39", features = ["full"] }
axum = { version = "0.7" }
local-ip-address = "0.6"
serde = { version = "1.0", features = ["derive"] }  # query requests
tokio-util = { version = "0.7", features = ["io"] } # files uploading
mime_guess = { version = "2.0" } # for file preview
#html = "0.6.3"
