[package]
name = "minicloud"
version = "0.12.2"
edition = "2021"

# ------------------------- Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# ------------------------- Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# ------------------------- Release Mode Optimizations (Optional)
# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# ------------------------- Alternative Linker
# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.23", features = ["derive"] }  # --- Arguments parsing
#wild = "2.2.0"  # --- Augment clap: for supporting wildcards (*) on Windows like you do on Linux
tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.8.1", features = ["multipart"] }
local-ip-address = "0.6.3"
serde = { version = "1.0", features = ["derive"] }  # query requests
tokio-util = { version = "0.7.13", features = ["io"] } # files uploading
mime_guess = { version = "2.0.5" } # for file preview
#html = "0.6.3"
fltk = { version = "1.5.1" }
tower-http = { version = "0.6.2", features = ["limit", "trace"]}
